# mach2h5

./: CMakeLists.txt
cmake/: FindBLOSC.cmake  FindZSTD.cmake
gen_data/: gen_test_data.R
include/: EigenH5.h
include/highfive/: H5Filter.hpp
include/range/v3/: istream_range.hpp
src/: main.cpp
